--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:vue dev:electron",
     "dev:vue": "vite",
-    "dev:electron": "pnpm transpile:electron; cross-env NODE_ENV=development electron .",
+    "dev:electron": "npm run transpile:electron; cross-env NODE_ENV=development electron .",
     "build": "rm -rf dist-vue && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "transpile:electron": "tsc -p src/electron/tsconfig.json",
-    "dist:mac": "pnpm transpile:electron && pnpm build && electron-builder --mac --arm64",
-    "dist:win": "pnpm transpile:electron && pnpm build && electron-builder --win --x64",
-    "dist:linux": "pnpm transpile:electron && pnpm build && electron-builder --linux --x64"
+    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
+    "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
+    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
@@ -36,7 +36,7 @@
     "@vue/tsconfig": "^0.8.1",
     "cross-env": "^10.1.0",
     "electron": "^39.1.0",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "^26.3.0",
     "less": "^4.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
