--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "Kessoku-the-Broadcaster",
   "private": true,
   "version": "0.0.0",
-  "main": "dist-electron/main.js",
+  "main": "dist/electron/main.js",
+  "author": {
+    "name": "algoUX"
+  },
+  "description": "专注于算法竞赛的直播推流软件",
   "scripts": {
     "dev": "npm-run-all --parallel dev:vue dev:electron",
     "dev:vue": "vite",
     "dev:electron": "pnpm transpile:electron; cross-env NODE_ENV=development electron .",
-    "build": "rm -rf dist-vue && vite build",
+    "build": "rm -rf dist/ui && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "transpile:electron": "rm -rf dist-electron && tsc -p src/electron/tsconfig.json",
-    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
+    "transpile:electron": "rm -rf dist/electron && tsc -p tsconfig.json",
+    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64 && npm run sign:mac",
     "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
+    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "sign:mac": "chmod +x scripts/mac-code-sign.sh && scripts/mac-code-sign.sh"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.11.7",
+    "media-recorder-js": "^2.1.0",
     "mediasoup-client": "3",
     "os-utils": "^0.0.14",
     "socket.io-client": "^4.8.1",
@@ -27,6 +33,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/dom-mediacapture-record": "^1.0.22",
     "@types/node": "^24.6.0",
     "@types/os-utils": "^0.0.4",
     "@types/simple-peer": "^9.11.9",
