--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,22 @@
 {
   "compilerOptions": {
+    "strict": false,
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": "./",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "outDir": "app",
-    "baseUrl": ".",
     "paths": {
+      "common/*": ["src/common/*"],
       "@/*": ["src/*"]
-    },
-    "skipLibCheck": true,
-    "types": ["vite/client"]
+    }
   },
-  "include": ["src/ui/**/*", "src/common/**/*", "types.d.ts"],
-  "exclude": ["src/electron", "node_modules", "dist-electron", "dist-vue"]
+  "include": ["src/**/*", "types.d.ts"],
+  "exclude": ["src/ui/**"]
 }
