--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "media-recorder-js": "^2.1.0",
     "mediasoup-client": "3",
     "os-utils": "^0.0.14",
+    "recordrtc": "^5.6.2",
     "socket.io-client": "^4.8.1",
     "vue": "^3.2.31",
     "vue-class-component": "^8.0.0-rc.1",
