--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.11.7",
+    "fix-webm-duration": "^1.0.6",
     "media-recorder-js": "^2.1.0",
     "mediasoup-client": "3",
     "os-utils": "^0.0.14",
@@ -31,10 +32,12 @@
     "vue": "^3.2.31",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-property-decorator": "^10.0.0-rc.3",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "webm-duration-fix": "^1.0.4"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.22",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^24.6.0",
     "@types/os-utils": "^0.0.4",
     "@types/simple-peer": "^9.11.9",
@@ -45,6 +48,7 @@
     "cross-env": "^10.1.0",
     "electron": "^39.1.0",
     "electron-builder": "^26.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "less": "^4.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
