--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "transpile:electron": "rm -rf dist/electron && tsc -p tsconfig.json",
-    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64 && npm run sign:mac",
-    "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "dist:mac:arm64": "npm run transpile:electron && npm run build && electron-builder --mac --arm64 && npm run sign:mac",
+    "dist:mac:x64": "npm run transpile:electron && npm run build && electron-builder --mac --x64 && npm run sign:mac",
+    "dist:win:x64": "npm run transpile:electron && npm run build && electron-builder --win --x64",
+    "dist:win:arm64": "npm run transpile:electron && npm run build && electron-builder --win --arm64",
+    "dist:linux:x64": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "dist:linux:arm64": "npm run transpile:electron && npm run build && electron-builder --linux --arm64",
     "sign:mac": "chmod +x scripts/mac-code-sign.sh && scripts/mac-code-sign.sh"
   },
   "dependencies": {
