--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:vue dev:electron",
     "dev:vue": "vite",
-    "dev:electron": "pnpm transpile:electron; cross-env NODE_ENV=development electron .",
+    "dev:electron": "pnpm run transpile:electron && cross-env NODE_ENV=development electron .",
     "build": "rm -rf dist/ui && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
