--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dist:win:arm64": "npm run transpile:electron && npm run build && electron-builder --win --arm64",
     "dist:linux:x64": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
     "dist:linux:arm64": "npm run transpile:electron && npm run build && electron-builder --linux --arm64",
-    "sign:mac": "chmod +x scripts/mac-code-sign.sh && scripts/mac-code-sign.sh"
+    "sign:mac": "chmod +x scripts/mac-code-sign.sh && scripts/mac-code-sign.sh",
+    "postinstall": "node scripts/setup-ffmpeg.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
@@ -32,6 +33,7 @@
     "os-utils": "^0.0.14",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.8.1",
+    "unzipper": "^0.12.3",
     "vue": "^3.2.31",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-property-decorator": "^10.0.0-rc.3",
@@ -50,7 +52,7 @@
     "@vue/tsconfig": "^0.8.1",
     "cross-env": "^10.1.0",
     "electron": "^39.1.0",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "^26.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "less": "^4.2.2",
     "npm-run-all": "^4.1.5",
