--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fix-webm-duration": "^1.0.6",
     "media-recorder-js": "^2.1.0",
     "mediasoup-client": "3",
+    "node-fetch": "^3.3.2",
     "os-utils": "^0.0.14",
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.8.1",
