--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "electron-log": "^5.4.3",
     "element-plus": "^2.11.7",
     "fix-webm-duration": "^1.0.6",
+    "fluent-ffmpeg": "^2.1.3",
     "media-recorder-js": "^2.1.0",
     "mediasoup-client": "3",
     "node-fetch": "^3.3.2",
@@ -54,7 +56,6 @@
     "cross-env": "^10.1.0",
     "electron": "^39.1.0",
     "electron-builder": "^26.3.0",
-    "fluent-ffmpeg": "^2.1.3",
     "less": "^4.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
