--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dist:linux:x64": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
     "dist:linux:arm64": "npm run transpile:electron && npm run build && electron-builder --linux --arm64",
     "sign:mac": "chmod +x scripts/mac-code-sign.sh && scripts/mac-code-sign.sh",
-    "postinstall": "node scripts/setup-ffmpeg.js"
+    "postinstall": "node scripts/setup-ffmpeg.js",
+    "electron:generate-icons": "electron-icon-builder --input=./resources/icon/icon.png --output=./resources/icon"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
@@ -56,6 +57,7 @@
     "cross-env": "^10.1.0",
     "electron": "^39.1.0",
     "electron-builder": "^26.3.0",
+    "electron-icon-builder": "^2.0.1",
     "less": "^4.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
