--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,36 @@ jobs:
     strategy:
       matrix:
         include:
+          # macOS ARM64
           - os: macos-latest
-            build_script: pnpm dist:mac:arm64
-            artifact_pattern: "dist/*.dmg"
+            build_script: pnpm run dist:mac:arm64
+            artifact_pattern: "dist/mac-arm64/*.dmg"
+            platform: mac
+          # macOS x64
+          - os: macos-13
+            build_script: pnpm run dist:mac:x64
+            artifact_pattern: "dist/mac/*.dmg"
+            platform: mac
+          # Windows x64
           - os: windows-latest
-            build_script: pnpm dist:win:x64
+            build_script: pnpm run dist:win:x64
             artifact_pattern: "dist/*.exe"
+            platform: win
+          # Windows ARM64
+          - os: windows-latest
+            build_script: pnpm run dist:win:arm64
+            artifact_pattern: "dist/*.exe"
+            platform: win
+          # Linux x64
           - os: ubuntu-latest
-            build_script: pnpm dist:linux:x64
-            artifact_pattern: "dist/*"
+            build_script: pnpm run dist:linux:x64
+            artifact_pattern: "dist/*.{AppImage,deb}"
+            platform: linux
+          # Linux ARM64
+          - os: ubuntu-latest
+            build_script: pnpm run dist:linux:arm64
+            artifact_pattern: "dist/*.{AppImage,deb}"
+            platform: linux
 
     steps:
       - name: Checkout code
@@ -44,5 +65,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ matrix.artifact_pattern }}
+          prerelease: true
+          draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
