--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Build Release
 on:
   push:
     tags:
-      - "v*"     # 推送 v1.0.0 即可自动构建 release
+      - 'v*'
 
 jobs:
   build:
@@ -12,34 +12,34 @@ jobs:
       matrix:
         include:
           # macOS ARM64
-          - os: macos-latest
+          - os: macos-26
             build_script: pnpm run dist:mac:arm64
-            artifact_pattern: "dist/mac-arm64/*.dmg"
+            artifact_pattern: 'dist/mac-arm64/*.dmg'
             platform: mac
           # macOS x64
-          - os: macos-13
+          - os: macos-latest
             build_script: pnpm run dist:mac:x64
-            artifact_pattern: "dist/mac/*.dmg"
+            artifact_pattern: 'dist/mac/*.dmg'
             platform: mac
           # Windows x64
           - os: windows-latest
             build_script: pnpm run dist:win:x64
-            artifact_pattern: "dist/*.exe"
+            artifact_pattern: 'dist/*.exe'
             platform: win
           # Windows ARM64
           - os: windows-latest
             build_script: pnpm run dist:win:arm64
-            artifact_pattern: "dist/*.exe"
+            artifact_pattern: 'dist/*.exe'
             platform: win
           # Linux x64
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:x64
-            artifact_pattern: "dist/*.{AppImage,deb}"
+            artifact_pattern: 'dist/*.{AppImage,deb}'
             platform: linux
           # Linux ARM64
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:arm64
-            artifact_pattern: "dist/*.{AppImage,deb}"
+            artifact_pattern: 'dist/*.{AppImage,deb}'
             platform: linux
 
     steps:
@@ -68,4 +68,4 @@ jobs:
           prerelease: true
           draft: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
