--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,50 +9,60 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false # 不因单个任务失败而取消其他任务
       matrix:
         include:
           # macOS ARM64
-          - os: macos-26
+          - os: macos-latest
             build_script: pnpm run dist:mac:arm64
             artifact_pattern: 'dist/mac-arm64/*.dmg'
             platform: mac
+            arch: arm64
           # macOS x64
-          - os: macos-latest
+          - os: macos-13
             build_script: pnpm run dist:mac:x64
             artifact_pattern: 'dist/mac/*.dmg'
             platform: mac
+            arch: x64
           # Windows x64
           - os: windows-latest
             build_script: pnpm run dist:win:x64
             artifact_pattern: 'dist/*.exe'
             platform: win
+            arch: x64
           # Windows ARM64
           - os: windows-latest
             build_script: pnpm run dist:win:arm64
             artifact_pattern: 'dist/*.exe'
             platform: win
+            arch: arm64
           # Linux x64
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:x64
             artifact_pattern: 'dist/*.{AppImage,deb}'
             platform: linux
+            arch: x64
           # Linux ARM64
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:arm64
             artifact_pattern: 'dist/*.{AppImage,deb}'
             platform: linux
+            arch: arm64
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Install pnpm
-        run: npm i -g pnpm
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
