--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "algoUX",
     "url": "https://algoux.org/",
-    "email": "sdutacm@163.com"
+    "email": "algoux.org@gmail.com"
   },
   "description": "专注于算法竞赛的直播推流软件",
   "scripts": {
