--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,34 +12,28 @@ jobs:
       fail-fast: false # 不因单个任务失败而取消其他任务
       matrix:
         include:
-          # macOS ARM64
           - os: macos-26
             build_script: pnpm run dist:mac:arm64
             artifact_name: macos-arm64
             artifact_path: 'dist/*.dmg'
-          # macOS x64
           - os: macos-26
             build_script: pnpm run dist:mac:x64
             artifact_name: macos-x64
             artifact_path: 'dist/*.dmg'
-          # Windows x64
           - os: windows-latest
             build_script: pnpm run dist:win:x64
             artifact_name: windows-x64
             artifact_path: 'dist/*-win-x64.exe'
-          # Windows ARM64
           - os: windows-latest
             build_script: pnpm run dist:win:arm64
             artifact_name: windows-arm64
             artifact_path: 'dist/*-win-arm64.exe'
-          # Linux x64
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:x64
             artifact_name: linux-x64
             artifact_path: |-
-              dist/*-linux-x64.AppImage
-              dist/*-linux-x64.deb
-          # Linux ARM64
+              dist/*-linux-x86_64.AppImage
+              dist/*-linux-amd64.deb
           - os: ubuntu-latest
             build_script: pnpm run dist:linux:arm64
             artifact_name: linux-arm64
