--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,16 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R artifacts
 
+      - name: Upload version index to COS
+        run: node scripts/upload-to-cos.js ${{ github.ref_name }}
+        env:
+          COS_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
+          COS_SECRET_KEY: ${{ secrets.COS_SECRET_KEY }}
+          COS_DOMAIN: ${{ secrets.COS_DOMAIN }}
+          COS_BUCKET: ${{ secrets.COS_BUCKET }}
+          COS_REGION: ${{ secrets.COS_REGION }}
+          TZ: Asia/Shanghai
+
       - name: Create Release and Upload Assets
         uses: softprops/action-gh-release@v2
         with:
