--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -85,7 +93,7 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R artifacts
 
-      - name: Upload version index to COS
+      - name: Upload to COS
         run: node scripts/upload-to-cos.js ${{ github.ref_name }}
         env:
           COS_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
