--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         run: ls -R artifacts
 
       - name: Upload to COS
-        run: node scripts/upload-to-cos.js ${{ github.ref_name }}
+        run: node scripts/upload-to-cos.js ${{ github.ref_name }} artifacts
         env:
           COS_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
           COS_SECRET_KEY: ${{ secrets.COS_SECRET_KEY }}
