--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Build Release
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   build:
@@ -64,6 +64,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.ATRIOR_TOKEN }}
 
+      # 上传构建产物为 GitHub Actions artifacts
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -71,21 +72,11 @@ jobs:
           path: ${{ matrix.artifact_path }}
           retention-days: 1
 
+  # 统一发布到 Release
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install COS SDK
-        run: npm install cos-nodejs-sdk-v5
-
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -94,15 +85,28 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R artifacts
 
+      - name: Checkout code for upload script
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: scripts
+
+      - name: Setup Node for upload
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install COS SDK
+        run: npm install cos-nodejs-sdk-v5
+
       - name: Upload to COS
         run: node scripts/upload-to-cos.js ${{ github.ref_name }} artifacts
         env:
           COS_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
           COS_SECRET_KEY: ${{ secrets.COS_SECRET_KEY }}
-          COS_DOMAIN: ${{ secrets.COS_DOMAIN }}
           COS_BUCKET: ${{ secrets.COS_BUCKET }}
           COS_REGION: ${{ secrets.COS_REGION }}
-          TZ: Asia/Shanghai
+          COS_DOMAIN: ${{ secrets.COS_DOMAIN }}
+          COS_BASE_PATH: ${{ secrets.COS_BASE_PATH }}
 
       - name: Create Release and Upload Assets
         uses: softprops/action-gh-release@v2
