--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "recordrtc": "^5.6.2",
     "socket.io-client": "^4.8.1",
     "unzipper": "^0.12.3",
+    "uuid": "^8.3.2",
     "vue": "^3.2.31",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-property-decorator": "^10.0.0-rc.3",
