--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Kessoku-the-Broadcaster",
   "private": true,
-  "version": "0.1.2-alpha",
+  "version": "1.0.0",
   "main": "dist/electron/main.js",
   "author": {
     "name": "algoUX",
